--- a/front-pod.yaml
+++ b/front-pod.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   containers:
   - name: container
-    image: gugucone/front:latest
+    image: gugucone/front:1.2
     command: ["/bin/sh", "-ec", "envsubst '$BACKEND_SVC_NAME' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
     envFrom:
     - configMapRef:
