--- a/default.conf
+++ b/default.conf
@@ -56,7 +56,7 @@ server {
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-Forwarded-Proto $scheme;
-                proxy_pass http://backed-svc:8000;
+                proxy_pass http://192.168.181.104:8000;
         }
 
         # pass PHP scripts to FastCGI server
