--- a/deployment-frontend.yml
+++ b/deployment-frontend.yml
@@ -16,6 +16,7 @@ spec:
     containers:
     - name: container
       image: gugucone/front:latest
+      command: ["/bin/sh", "-ec", "envsubst '$BACKEND_SVC_NAME' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
       envFrom:
       - configMapRef:
           name: frontend-cm
